--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
 </head>
 <body>
     <header>
-        <nav></nav>
+            <h1>Calculator</h1>
     </header>
+    <main>
+        <section class="calc">
+            <input type="text" class="screen">
+            <div class="container">
+                <div class="num">1</div>
+                <div class="num">2</div>
+                <div class="num">3</div>
+                <div class="num">4</div>
+                <div class="num">5</div>
+                <div class="num">6</div>
+                <div class="num">7</div>
+                <div class="num">8</div>
+                <div class="num">9</div>
+                <div class="operator">+</div>
+                <div class="operator">-</div>
+                <div class="operator">*</div>
+                <div class="operator">/</div>
+                <div class="operator reset">AC</div>
+                <div class="operator delete">DEL</div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
