Increase calc height

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
                 <div class="num">7</div>
                 <div class="num">8</div>
                 <div class="num">9</div>
+                <div class="num">0</div>
                 <div class="operator">+</div>
                 <div class="operator">-</div>
                 <div class="operator">*</div>
                 <div class="operator">/</div>
+                <div class="operator result">=</div>
                 <div class="operator reset">AC</div>
                 <div class="operator delete">DEL</div>
             </div>
