Change input value
Add event listener to number to change input value.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="calc">
-            <input type="text" class="screen">
+            <input type="text" class="screen" readonly>
             <div class="container">
                 <div class="num">1</div>
                 <div class="num">2</div>
@@ -29,9 +29,10 @@
                 <div class="operator">-</div>
                 <div class="operator">*</div>
                 <div class="operator">/</div>
-                <div class="operator result">=</div>
-                <div class="operator reset">AC</div>
-                <div class="operator delete">DEL</div>
+                <div class="num">.</div>
+                <div class="result">=</div>
+                <div class="reset">AC</div>
+                <div class="delete">DEL</div>
             </div>
         </section>
     </main>
